--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 ifeq ($(OS), Windows_NT)
-  TECMAKE_CMD = $(MAKE) --no-print-directory -f ../tecmakewin.mak TEC_UNAME=$(TEC_UNAME)
+  TECMAKE_CMD = +$(MAKE) --no-print-directory -f ../tecmakewin.mak TEC_UNAME=$(TEC_UNAME)
 else
-  TECMAKE_CMD = $(MAKE) --no-print-directory -f ../tecmake.mak
+  TECMAKE_CMD = +$(MAKE) --no-print-directory -f ../tecmake.mak
 endif
 
 .PHONY: do_all iup iupgtk iupmot iuphaiku iupstub
